--- a/app/views/instructors/instructors/show.html.erb
+++ b/app/views/instructors/instructors/show.html.erb
@@ -117,6 +117,29 @@
           <p class="text-center mb-5">現在レッスンは予約されておりません。</p>
         <% end %>
       </div>
+      <div class="reviews border-bottom my-5">
+        <h4 class="border-heading-side mb-5 mt-5">レビュー</h4>
+        <% if @instructor.reviews.present? %>
+          <table class="table table-borderless table-sm col-10 offset-1 mb-5">
+            <thead class="border-bottom">
+              <tr>
+                <td class="pl-3">レビュー投稿者</td>
+                <td>レビュー内容</td>
+              </tr>
+            </thead>
+            <tbody>
+              <% @instructor.reviews.each do |review| %>
+                <tr>
+                  <td class="pl-3"><%= review.user.fullname %></td>
+                  <td><%= review.comment %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        <% else %>
+          <p>レッスンのレビューはまだありません。</p>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
