[update] contacts views

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,7 +10,7 @@
       </div>
       <ul class="footer-nav d-flex">
         <li class="mr-5"><%= link_to "インストラクター", instructors_path %></li>
-        <li><%= link_to "お問い合わせ", root_path %></li>
+        <li><%= link_to "お問い合わせ", new_contact_path %></li>
       </ul>
     </div>
   <% end %>
