--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -537,6 +537,13 @@ footer {
 }
 
 
+// public/contacts confirm page
+
+.contact-confirm {
+  font-size: 1.2rem;
+}
+
+
 // instructors/mypage
 
 .instructor-mypage{
