[add] search controller and view

--- a/app/views/instructors/instructors/show.html.erb
+++ b/app/views/instructors/instructors/show.html.erb
@@ -137,7 +137,7 @@
             </tbody>
           </table>
         <% else %>
-          <p>レッスンのレビューはまだありません。</p>
+          <p class="text-center mb-5">レッスンのレビューはまだありません。</p>
         <% end %>
       </div>
     </div>
