--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,6 +81,55 @@ header {
   .navbar-toggler .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(228,228,228,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24' /%3E%3C/svg%3E");
   }
+
+  .search-field {
+    margin-top: 0.9rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    padding: 10px 38px 10px 10px;
+    margin: 5px 0;
+    border: 1px solid #999;
+    border-radius: 5px;
+  }
+
+  .search-form {
+    position: relative;
+    padding-top: 7px;
+
+    .search-icon {
+      position: absolute;
+      width: 38px;
+      height: 38px;
+      top: calc(50% - 19px);
+      right: 33px;
+      border-radius: 0 4px 4px 0;
+      background: none;
+      border: none;
+
+      &::before {
+        position: absolute;
+        content: '';
+        width: 15px;
+        height: 15px;
+        top: calc(50% - 9px);
+        left: calc(50% - 9px);
+        border-radius: 50%;
+        box-shadow: 0 0 0 2px #000000;
+      }
+
+      &::after {
+        position: absolute;
+        content: '';
+        width: 8px;
+        height: 6px;
+        top: calc(50% + 6px);
+        left: calc(50% + 2px);
+        border-top: solid 2px #000000;
+        transform: rotate(45deg);
+      }
+    }
+  }
 }
 
 
@@ -573,9 +622,6 @@ footer {
 // instructors/users page
 
 .users {
-  .text-sm {
-    font-size: 1.3rem;
-  }
 
   table {
     a:hover {
