--- a/app/views/public/instructors/index.html.erb
+++ b/app/views/public/instructors/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="public-instructors col-10 offset-1">
+    <div class="public-instructors col-10 offset-1 mb-5">
       <h2 class="border-heading-bottom mb-5">インストラクター</h2>
       <p class="mb-5 pl-3">※ 画像をクリックすると、各インストラクターの詳細がご覧いただけます。</p>
       <ul class="instructor-list d-flex flex-wrap">
@@ -26,6 +26,7 @@
           </li>
         <% end %>
       </ul>
+      <%= paginate @instructors %>
     </div>
   </div>
 </div>
