--- a/app/views/instructors/rooms/_chat-content.html.erb
+++ b/app/views/instructors/rooms/_chat-content.html.erb
@@ -1,4 +1,4 @@
-<div id="instructor-chats">
+<div id="instructor-chats" class="chats">
   <% chats.each do |chat| %>
     <% if chat.is_user == false %>
       <div class="my-chats">
