--- a/app/views/public/rooms/_chat-content.html.erb
+++ b/app/views/public/rooms/_chat-content.html.erb
@@ -1,4 +1,4 @@
-<div id="user-chats">
+<div id="user-chats" class="chats">
   <% chats.each do |chat| %>
     <% if chat.is_user == true %>
       <div class="my-chats">
