--- a/app/views/public/rooms/_chat-content.html.erb
+++ b/app/views/public/rooms/_chat-content.html.erb
@@ -1,4 +1,5 @@
 <div id="user-chats" class="chats">
+  <!-- <div id="current_page" value="<%= @page %>" -->
   <% chats.each do |chat| %>
     <% if chat.is_user == true %>
       <div class="my-chats">
