[add] js to instructors show page fix #3

--- a/app/views/instructors/instructors/show.html.erb
+++ b/app/views/instructors/instructors/show.html.erb
@@ -143,3 +143,13 @@
     </div>
   </div>
 </div>
+<% if @lesson.errors.any? %>
+  <script type="text/javascript">
+  $(document).ready(function () {
+    // instructors/mypage のURLを取得
+    var $dir = location.href.split("/");
+    var $dir2 = $dir[$dir.length -2];
+    history.pushState('', '', '/' + $dir2 + '/mypage')
+  });
+  </script>
+<% end %>
