--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -427,7 +427,7 @@ footer {
 // public/chat page
 
 .user-chat-page {
-  #user-chats {
+  .user-chats {
     text-align: right;
     padding: 0 20px;
 
