--- a/app/views/public/contacts/new.html.erb
+++ b/app/views/public/contacts/new.html.erb
@@ -18,7 +18,7 @@
           </div>
           <div class="form-group mt-5">
             <%= f.label :message, "お問い合わせ内容" %><span class="essential-icon">必須</span>
-            <%= f.text_area :message, rows: 5, placeholder: 'こちらにお問い合わせ内容をお書きください', class: 'form-control validate[required] mt-2' %>
+            <%= f.text_area :message, rows: 5, placeholder: 'こちらにお問い合わせ内容をお書きください&#13;&#10;文字数は2000文字以下でご記入ください'.html_safe, class: 'form-control validate[required] mt-2' %>
           </div>
           <div class="contact-submit text-center my-5 py-3">
             <%= f.submit "入力内容を確認する", class: 'btn btn-outline-light' %>
