--- a/app/views/instructors/users/show.html.erb
+++ b/app/views/instructors/users/show.html.erb
@@ -37,7 +37,7 @@
         </table>
       </div>
       <div class="chat-link text-center mt-5 pt-3">
-        <%= link_to instructors_room_path(@user), class: 'btn btn-outline-light' do %>
+        <%= link_to instructors_room_path(@room), class: 'btn btn-outline-light' do %>
           <%= @user.lastname %>さんとのチャットを見る
         <% end %>
       </div>
