--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -427,6 +427,10 @@ footer {
 // public/chat page
 
 .user-chat-page {
+  ul.pagination {
+    display: none;
+  }
+
   .user-chats {
     text-align: right;
     padding: 0 20px;
@@ -462,12 +466,12 @@ footer {
     .instructor-chats {
       width: 100%;
       overflow: hidden;
-      margin-left: -50px;
+      margin-left: 0;
 
       .instructor-icon {
         img {
-          width: 80px;
-          height: 80px;
+          width: 70px;
+          height: 70px;
           object-fit: cover;
           object-position: 0% 0%;
           border-radius: 50%;
@@ -667,7 +671,11 @@ footer {
 // instructors/chat page
 
 .instructor-chat-page {
-  #instructor-chats {
+  ul.pagination {
+    display: none;
+  }
+
+  .instructor-chats {
     text-align: right;
     padding: 0 20px;
 
@@ -702,12 +710,12 @@ footer {
     .user-chats {
       width: 100%;
       overflow: hidden;
-      margin-left: -50px;
+      margin-left: 0;
 
       .user-icon {
         img {
-          width: 80px;
-          height: 80px;
+          width: 70px;
+          height: 70px;
           object-fit: cover;
           object-position: 0% 0%;
           border-radius: 50%;
