[update] pages responsive

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
     <%= render 'shared/header' %>
-    <main class="mt-5">
+    <main class="mt-lg-5 mt-3">
       <div class="container">
         <div id="flash-messages">
           <%= render 'shared/flash_message' %>
