--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,10 +2,10 @@
 
 <div class="main-top col-12 mt-5">
   <div class="main-content d-flex mt-3">
-    <div class="img col-7 ml-3">
-      <%= image_tag asset_path('top-img.png'), :size => '1100x400' %>
+    <div class="img col-8 ml-3">
+      <%= image_tag asset_path('top-img.png'), class: 'img-fluid' %>
     </div>
-    <div class="main-content-sub col-4 pl-5">
+    <div class="main-content-sub col-4 pl-4">
       <p>LYbodyは完全オンラインの <br> パーソナルジムです！ <br> 自宅で最高のトレーニングを！</p>
     </div>
   </div>
