--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -300,7 +300,7 @@ footer {
   .main-content-sub {
     font-size: 2rem;
     position: absolute;
-    bottom: 0;
+    bottom: 10px;
     right: 0;
   }
 }
@@ -790,19 +790,87 @@ footer {
 }
 
 
-// タプレットサイズ(768px)以下
+// md(992px)以下
+
+@media screen and (max-width:992px) {
+  html {
+    font-size: 1.5vw;
+  }
+
+
+  // public/top page
+
+  .main-content {
+    .main-content-sub {
+      font-size: 1.4rem;
+    }
+  }
+}
+
+
+// sm(768px)以下
 
 @media screen and (max-width:768px) {
   html {
     font-size: 2vw;
   }
+
+
+  header {
+    nav a img {
+      width: 170px;
+      height: 50px;
+    }
+  }
+
+
+  // headerの高さを出す
+  .header-height {
+    width: 100%;
+    height: 74px;
+  }
+
+
+  // public/top page
+
+  .main-content {
+    .main-content-sub {
+      font-size: 1rem;
+    }
+  }
+
 }
 
 
-// スマホサイズ(425px)以下
+// xs(544px)以下
 
-@media screen and (max-width:425px) {
+@media screen and (max-width:544px) {
   html {
     font-size: 2.5vw;
+  }
+
+
+  header {
+    nav a img {
+      width: 130px;
+      height: 40px;
+    }
+  }
+
+
+  // headerの高さを出す
+  .header-height {
+    width: 100%;
+    height: 56px;
+  }
+
+
+  // public/top page
+
+  .main-content {
+
+    .main-content-sub {
+      font-size: 0.6rem;
+    }
   }
 }
