--- a/app/views/kaminari/_page.html.erb
+++ b/app/views/kaminari/_page.html.erb
@@ -1,7 +1,6 @@
 <% if page.current? %>
   <li class="page-item active">
-    <% url = "#{url}?page=1" if page.number == 1 %>
-    <%= link_to_unless page.current?, page.number, url, opts = { :remote => remote, :rel => page.next? ? 'next' : page.prev? ? 'prev' : nil, class: 'page-link' } %>
+    <%= content_tag :a, page, data: { remote: remote }, rel: page.rel, class: 'page-link' %>
   </li>
 <% else %>
   <li class="page-item">
