--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,23 +1,23 @@
 <% provide(:title, 'LYbody') %>
 
 <div class="main-top col-12 mt-5">
-  <div class="main-content d-flex mt-3">
-    <div class="img col-8 ml-3">
+  <div class="main-content d-md-flex mt-3">
+    <div class="img col-md-8 col-12 ml-3">
       <%= image_tag asset_path('top-img.png'), class: 'img-fluid' %>
     </div>
-    <div class="main-content-sub col-4 pl-4">
+    <div class="main-content-sub col-md-4 col-12 pl-4">
       <p>LYbodyは完全オンラインの <br> パーソナルジムです！ <br> 自宅で最高のトレーニングを！</p>
     </div>
   </div>
 
   <div class="main-images my-5 py-5">
-    <div class="image-list-top d-flex mt-5">
-      <li class="image-list-item col-6"><%= image_tag asset_path('top1.jpg'), class: 'img-fluid' %></li>
-      <li class="image-list-item col-6"><%= image_tag asset_path('top2.jpg'), class: 'img-fluid' %></li>
+    <div class="image-list-top d-md-flex mt-5">
+      <li class="image-list-item col-md-6 col-12"><%= image_tag asset_path('top1.jpg'), class: 'img-fluid' %></li>
+      <li class="image-list-item col-md-6 col-12 mt-md-0 mt-5"><%= image_tag asset_path('top2.jpg'), class: 'img-fluid' %></li>
     </div>
-    <div class="image-list-bottom d-flex my-5 pt-5">
-      <li class="image-list-item col-6"><%= image_tag asset_path('top3.jpg'), class: 'img-fluid' %></li>
-      <li class="image-list-item col-6"><%= image_tag asset_path('top4.jpg'), class: 'img-fluid' %></li>
+    <div class="image-list-bottom d-md-flex my-5 pt-md-5">
+      <li class="image-list-item col-md-6 col-12"><%= image_tag asset_path('top3.jpg'), class: 'img-fluid' %></li>
+      <li class="image-list-item col-md-6 col-12 mt-md-0 mt-5"><%= image_tag asset_path('top4.jpg'), class: 'img-fluid' %></li>
     </div>
   </div>
 </div>
