--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -8,7 +8,60 @@
     <div class="signup col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12 mb-5 pb-5">
       <h2 class="border-heading-bottom mb-5">新規登録</h2>
       <p class="mb-5 col-12 ml-2">※<span class="essential-icon ml-2">必須</span> は入力必須項目です。</p>
-      <%= render 'shared/user-form', model: @user, url: user_registration_path, submit_text: '登録する' %>
+      <div class="col-10 offset-1">
+        <%= form_with model: @user, url: user_registration_path, id: 'user-form', local: true do |f| %>
+          <div class="form-group">
+            <%= f.label 'お名前' %><span class="essential-icon">必須</span>
+            <div class="row mt-2 pl-4">
+              <%= f.label :firstname, '（姓）', class: 'pt-1 pr-2' %>
+              <%= f.text_field :firstname, autocomplete: 'firstname', placeholder: '例：山田', class: 'form-control col-lg-4 col-10 validate[required] mr-md-5' %>
+              <%= f.label :lastname, '（名）', class: 'pt-1 pr-2 mt-4 mt-lg-0' %>
+              <%= f.text_field :lastname, autocomplete: 'lastname', placeholder: '例：太郎', class: 'form-control col-lg-4 col-10 validate[required] mt-4 mt-lg-0' %>
+            </div>
+          </div>
+          <div class="form-group mt-4">
+            <%= f.label 'フリガナ' %><span class="essential-icon">必須</span>
+            <div class="row mt-2 pl-4">
+              <%= f.label :kana_firstname, '（姓）', class: 'pt-1 pr-2' %>
+              <%= f.text_field :kana_firstname, autocomplete: 'kana_firstname', placeholder: '例：ヤマダ', class: 'form-control col-lg-4 col-10 validate[required, custom[katakana]] mr-md-5' %>
+              <%= f.label :kana_lastname, '（名）', class: 'pt-1 pr-2 mt-4 mt-lg-0' %>
+              <%= f.text_field :kana_lastname, autocomplete: 'kana_lastname', placeholder: '例：タロウ', class: 'form-control col-lg-4 col-10 validate[required, custom[katakana]] mt-4 mt-lg-0' %>
+            </div>
+          </div>
+          <div class="form-group mt-5">
+            <%= f.label :email, 'メールアドレス' %><span class="essential-icon">必須</span>
+            <%= f.email_field :email, autocomplete: 'email', placeholder: '例：lybody@example.com', class: 'form-control validate[required, custom[email]] mt-2' %>
+          </div>
+          <div class="form-group mt-5">
+            <%= f.label :phone_number, '電話番号' %><span class="essential-icon">必須</span>
+            <%= f.text_field :phone_number, autocomplete: 'phone_number', placeholder: '例：00011112222', class: 'form-control validate[required, custom[phone]] mt-2' %>
+            <small class="form-text text-muted pt-1"> ※ 電話番号はハイフン（-）無しで記入してください。</small>
+          </div>
+          <div class="form-group mt-4">
+            <%= f.label :password, 'パスワード' %><span class="essential-icon">必須</span>
+            <%= f.password_field :password, autocomplete: 'new-password', placeholder: '設定したいパスワードを入力してください', class: 'form-control validate[required, minSize[8], custom[onlyLetterNumber]] mt-2', id: 'password' %>
+            <small class="form-text text-muted pt-1"> ※ パスワードは半角英数字８文字以上で入力してください。</small>
+          </div>
+          <div class="form-group mt-4">
+            <%= f.label :password_confirmation, "パスワード（確認）" %><span class="essential-icon">必須</span>
+            <%= f.password_field :password_confirmation, autocomplete: 'new-password', placeholder: '確認のため、もう一度入力してください', class: 'form-control validate[required, equals[password], minSize[8], custom[onlyLetterNumber]] mt-2' %>
+          </div>
+          <div class="submit-button text-center">
+            <%= f.submit '登録する', class: 'btn btn-outline-light btn-lg px-5 mt-5' %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
+
+<% if @user.errors.any? %>
+  <script type="text/javascript">
+  $(document).ready(function () {
+    // users/sign_up のURLを取得
+    var $dir = location.href.split("/");
+    var $dir2 = $dir[$dir.length -1];
+    history.pushState('', '', '/' + $dir2 + '/sign_up')
+  });
+  </script>
+<% end %>
