--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -383,6 +383,10 @@ footer {
   .reservation-important {
     border-bottom: 1px solid #c2a8ff;
   }
+
+  .br {
+    display: none;
+  }
 }
 
 
@@ -828,6 +832,10 @@ footer {
         img {
           width: 100px;
         }
+
+        .caption {
+          padding-top: 43px;
+        }
       }
     }
   }
@@ -936,6 +944,11 @@ footer {
       .image-wrap {
         img {
           width: 60px;
+        }
+
+        .caption {
+          padding-top: 25px;
+          font-size: 0.8rem;
         }
       }
     }
